// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScanDownload Component should handle custom children: custom 1`] = `
<button
  class="btn btn-default"
  id="generatedid-"
  title="Download"
  type="button"
>
  lorem ipsum
</button>
`;

exports[`ScanDownload Component should have an optional tooltip: tooltip 1`] = `
<ScanDownload
  downloadId={1}
  downloadName={null}
  getReportsDownload={[Function]}
  tooltip="Lorem ipsum dolor sit"
>
  <Tooltip
    delayShow={500}
    id={null}
    placement="top"
    popover={null}
    rootClose={true}
    tooltip="Lorem ipsum dolor sit"
    trigger={
      Array [
        "hover",
      ]
    }
  >
    <OverlayTrigger
      defaultOverlayShown={false}
      delayShow={500}
      overlay={
        <Tooltip
          bsClass="tooltip"
          id="generatedid-"
          placement="right"
        >
          Lorem ipsum dolor sit
        </Tooltip>
      }
      placement="top"
      rootClose={true}
      trigger={
        Array [
          "hover",
        ]
      }
    >
      <span
        onClick={null}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          disabled={false}
          id="generatedid-"
          onClick={[Function]}
          title="Download"
        >
          <button
            className="btn btn-default"
            disabled={false}
            id="generatedid-"
            onClick={[Function]}
            title="Download"
            type="button"
          >
            Download
          </button>
        </Button>
      </span>
    </OverlayTrigger>
  </Tooltip>
</ScanDownload>
`;

exports[`ScanDownload Component should render a connected component: connected 1`] = `
<button
  class="btn btn-default"
  id="generatedid-"
  title="Download"
  type="button"
>
  Download
</button>
`;

exports[`ScanDownload Component should render a non-connected component: non-connected 1`] = `
<button
  class="btn btn-default"
  id="generatedid-"
  title="Download"
  type="button"
>
  Download
</button>
`;
